--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QuantStrategyLLC</title>
+    <title>華爾街現場</title>
+    <link rel="icon" type="image/png" href="/logo.png">
+    <link rel="shortcut icon" href="/logo.png" type="image/x-icon">
+
+    <meta property="og:title" content="華爾街現場" />
+    <meta property="og:description" content="華爾街現場敘述。" />
+    <meta property="og:image" content="https://res.cloudinary.com/yalecloud/image/upload/v1766455585/logo_pppcrs.png" />
+    <meta property="og:url" content="https://quantstrategyllc.zeabur.app/" />
+    <meta property="og:site_name" content="QuantStrategyLLC" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
